crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__sylvan_safekeeper_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Activated",
      "effect": {
        "type": "GenericEffect",
        "static_abilities": [
          {
            "mode": "Continuous",
            "affected": {
              "type": "ParentTarget"
            },
            "modifications": [
              {
                "type": "AddKeyword",
                "keyword": "Shroud"
              }
            ],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "gain shroud"
          }
        ],
        "duration": "UntilEndOfTurn",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Creature"
          ],
          "controller": "You",
          "properties": []
        }
      },
      "cost": {
        "type": "Sacrifice",
        "target": {
          "type": "Typed",
          "type_filters": [
            "Land"
          ],
          "controller": null,
          "properties": []
        },
        "count": 1
      },
      "sub_ability": null,
      "duration": "UntilEndOfTurn",
      "description": "Sacrifice a land: Target creature you control gains shroud until end of turn.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
