crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__temporal_delayed_trigger@full_throttle_temporal_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "CreateDelayedTrigger",
        "condition": {
          "type": "WheneverEvent",
          "trigger": {
            "mode": "Phase",
            "execute": null,
            "valid_card": null,
            "origin": null,
            "destination": null,
            "trigger_zones": [
              "Battlefield"
            ],
            "phase": "BeginCombat",
            "optional": false,
            "damage_kind": "Any",
            "secondary": false,
            "valid_target": null,
            "valid_source": null,
            "description": null,
            "constraint": null,
            "condition": null,
            "batched": false
          }
        },
        "effect": {
          "kind": "Spell",
          "effect": {
            "type": "SetTapState",
            "target": {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "AttackedThisTurn"
                }
              ]
            },
            "scope": {
              "type": "All"
            },
            "state": {
              "type": "Untap"
            }
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "uses_tracked_set": false
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
