crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__temporal_delayed_trigger@galvanic_iteration_temporal_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 115,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "When you next cast an instant or sorcery spell this turn, copy that spell. You may choose new targets for the copy."
      },
      "node": {
        "Spell": {
          "source_text": "When you next cast an instant or sorcery spell this turn, copy that spell. You may choose new targets for the copy.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 115,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "When you next cast an instant or sorcery spell this turn, copy that spell. You may choose new targets for the copy."
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "CreateDelayedTrigger",
                    "condition": {
                      "type": "WhenNextEvent",
                      "trigger": {
                        "mode": "SpellCast",
                        "execute": null,
                        "valid_card": {
                          "type": "Or",
                          "filters": [
                            {
                              "type": "Typed",
                              "type_filters": [
                                "Instant"
                              ],
                              "controller": null,
                              "properties": []
                            },
                            {
                              "type": "Typed",
                              "type_filters": [
                                "Sorcery"
                              ],
                              "controller": null,
                              "properties": []
                            }
                          ]
                        },
                        "origin": null,
                        "destination": null,
                        "trigger_zones": [],
                        "phase": null,
                        "optional": false,
                        "damage_kind": "Any",
                        "secondary": false,
                        "valid_target": {
                          "type": "Controller"
                        },
                        "valid_source": null,
                        "description": null,
                        "constraint": null,
                        "condition": null,
                        "batched": false
                      },
                      "or_trigger": null
                    },
                    "effect": {
                      "kind": "Spell",
                      "effect": {
                        "type": "CopySpell",
                        "target": {
                          "type": "TriggeringSource"
                        },
                        "retarget": {
                          "type": "MayChooseNewTargets"
                        },
                        "starting_loyalty_from_casualty_sacrifice": false
                      },
                      "cost": null,
                      "sub_ability": null,
                      "duration": null,
                      "description": null,
                      "target_prompt": null,
                      "condition": null,
                      "optional_targeting": false,
                      "optional": false,
                      "forward_result": false
                    },
                    "uses_tracked_set": false
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "When you next cast an instant or sorcery spell this turn, copy that spell. You may choose new targets for the copy.",
  "card_name": "Galvanic Iteration"
}
