crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__temporal_delayed_trigger@galvanic_iteration_temporal_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "CreateDelayedTrigger",
        "condition": {
          "type": "WhenNextEvent",
          "trigger": {
            "mode": "SpellCast",
            "execute": null,
            "valid_card": {
              "type": "Or",
              "filters": [
                {
                  "type": "Typed",
                  "type_filters": [
                    "Instant"
                  ],
                  "controller": null,
                  "properties": []
                },
                {
                  "type": "Typed",
                  "type_filters": [
                    "Sorcery"
                  ],
                  "controller": null,
                  "properties": []
                }
              ]
            },
            "origin": null,
            "destination": null,
            "trigger_zones": [],
            "phase": null,
            "optional": false,
            "damage_kind": "Any",
            "secondary": false,
            "valid_target": {
              "type": "Controller"
            },
            "valid_source": null,
            "description": null,
            "constraint": null,
            "condition": null,
            "batched": false
          },
          "or_trigger": null
        },
        "effect": {
          "kind": "Spell",
          "effect": {
            "type": "CopySpell",
            "target": {
              "type": "TriggeringSource"
            },
            "retarget": {
              "type": "MayChooseNewTargets"
            },
            "starting_loyalty_from_casualty_sacrifice": false
          },
          "cost": null,
          "sub_ability": null,
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "uses_tracked_set": false
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
