crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__temporal_delayed_trigger@pact_of_negation_temporal_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 85,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "At the beginning of your next upkeep, pay {3}{U}{U}. If you don't, you lose the game."
      },
      "node": {
        "Spell": {
          "source_text": "At the beginning of your next upkeep, pay {3}{U}{U}. If you don't, you lose the game.",
          "body": {
            "clauses": [
              {
                "id": 0,
                "source": {
                  "id": {
                    "item": 0,
                    "ordinal": 1
                  },
                  "span": {
                    "first_line": 0,
                    "last_line": 0,
                    "start_byte": 0,
                    "end_byte": 85,
                    "precision": "ChainRelative",
                    "ordinal_within_span": 0
                  },
                  "fragment": "At the beginning of your next upkeep, pay {3}{U}{U}. If you don't, you lose the game."
                },
                "disposition": {
                  "Emit": {
                    "followup": null,
                    "intrinsic": null
                  }
                },
                "parsed": {
                  "effect": {
                    "type": "CreateDelayedTrigger",
                    "condition": {
                      "type": "AtNextPhaseForPlayer",
                      "phase": "Upkeep",
                      "player": 0
                    },
                    "effect": {
                      "kind": "Spell",
                      "effect": {
                        "type": "PayCost",
                        "cost": {
                          "type": "Mana",
                          "cost": {
                            "type": "Cost",
                            "shards": [
                              "Blue",
                              "Blue"
                            ],
                            "generic": 3
                          }
                        },
                        "payer": {
                          "type": "Controller"
                        }
                      },
                      "cost": null,
                      "sub_ability": {
                        "kind": "Spell",
                        "effect": {
                          "type": "LoseTheGame",
                          "target": {
                            "type": "Controller"
                          }
                        },
                        "cost": null,
                        "sub_ability": null,
                        "duration": null,
                        "description": null,
                        "target_prompt": null,
                        "condition": {
                          "type": "Not",
                          "condition": {
                            "type": "EffectOutcome",
                            "signal": "OptionalEffectPerformed"
                          }
                        },
                        "optional_targeting": false,
                        "optional": false,
                        "forward_result": false,
                        "sub_link": "SequentialSibling"
                      },
                      "duration": null,
                      "description": null,
                      "target_prompt": null,
                      "condition": null,
                      "optional_targeting": false,
                      "optional": false,
                      "forward_result": false
                    },
                    "uses_tracked_set": false
                  },
                  "duration": null,
                  "sub_ability": null,
                  "distribute": null,
                  "multi_target": null,
                  "condition": null,
                  "optional": false,
                  "unless_pay": null
                },
                "boundary": null,
                "condition": null,
                "is_optional": false,
                "opponent_may_scope": null,
                "repeat_for": null,
                "player_scope": null,
                "starting_with": null,
                "delayed_condition": null,
                "prefix_delayed_condition": null,
                "multi_target": null,
                "where_x_expression": null,
                "unless_pay": null
              }
            ],
            "kind": "Spell",
            "continuation_kind": null,
            "player_scope_rewrite": "Apply",
            "chain_rounding": null,
            "actor": null,
            "in_trigger": false,
            "repeat_until": null
          },
          "shell": {
            "sub_link": null
          },
          "die_results": [],
          "root_transforms": []
        }
      }
    }
  ],
  "source_text": "At the beginning of your next upkeep, pay {3}{U}{U}. If you don't, you lose the game.",
  "card_name": "Pact of Negation"
}
