crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__temporal_delayed_trigger@pact_of_negation_temporal_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "CreateDelayedTrigger",
        "condition": {
          "type": "AtNextPhaseForPlayer",
          "phase": "Upkeep",
          "player": 0
        },
        "effect": {
          "kind": "Spell",
          "effect": {
            "type": "PayCost",
            "cost": {
              "type": "Mana",
              "cost": {
                "type": "Cost",
                "shards": [
                  "Blue",
                  "Blue"
                ],
                "generic": 3
              }
            },
            "payer": {
              "type": "Controller"
            }
          },
          "cost": null,
          "sub_ability": {
            "kind": "Spell",
            "effect": {
              "type": "LoseTheGame",
              "target": {
                "type": "Controller"
              }
            },
            "cost": null,
            "sub_ability": null,
            "duration": null,
            "description": null,
            "target_prompt": null,
            "condition": {
              "type": "Not",
              "condition": {
                "type": "EffectOutcome",
                "signal": "OptionalEffectPerformed"
              }
            },
            "optional_targeting": false,
            "optional": false,
            "forward_result": false,
            "sub_link": "SequentialSibling"
          },
          "duration": null,
          "description": null,
          "target_prompt": null,
          "condition": null,
          "optional_targeting": false,
          "optional": false,
          "forward_result": false
        },
        "uses_tracked_set": false
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": null,
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
