crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__thalia_guardian_of_thraben_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 12,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "First strike"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "First strike",
            "description": "First strike"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 13,
          "end_byte": 54,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Noncreature spells cost {1} more to cast."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": {
              "ModifyCost": {
                "mode": "Raise",
                "amount": {
                  "type": "Cost",
                  "shards": [],
                  "generic": 1
                },
                "spell_filter": {
                  "type": "Typed",
                  "type_filters": [
                    {
                      "Non": "Creature"
                    }
                  ],
                  "controller": null,
                  "properties": []
                }
              }
            },
            "affected": {
              "type": "Typed",
              "type_filters": [
                "Card"
              ],
              "controller": null,
              "properties": []
            },
            "modifications": [],
            "condition": null,
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "Noncreature spells cost {1} more to cast."
          },
          "source_text": "Noncreature spells cost {1} more to cast.",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "First strike\nNoncreature spells cost {1} more to cast.",
  "card_name": "Thalia, Guardian of Thraben"
}
